tests/ui/lexer/lex-bad-char-literals-5.stderr
error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-5.rs:1:18
   |
LL | static c: char = '\x10\x10';
   |                  ^^^^^^^^^^
   |
help: if you meant to write a `str` literal, use double quotes
   |
LL | static c: char = "\x10\x10";
   |                  ~~~~~~~~~~

error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-5.rs:5:20
   |
LL |     let ch: &str = '\x10\x10';
   |                    ^^^^^^^^^^
   |
help: if you meant to write a `str` literal, use double quotes
   |
LL |     let ch: &str = "\x10\x10";
   |                    ~~~~~~~~~~

error: aborting due to 2 previous errors

